chore: fix notification touching status bar on ios

--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,8 @@ body {
 }
 
 #modal-box,
-.sidebar {
+.sidebar,
+#notification {
   padding-top: env(safe-area-inset-top) !important;
 }
 
